fixed alignment issues

--- a/vending_machine.css
+++ b/vending_machine.css
@@ -4,9 +4,8 @@
   height:600px;
   border: 15px solid black;
   padding: 10px;
-  margin-left: 650px
-  
-  
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .items{
